adicionando testes dos totais calóricos e refatorando